# hcw-sms

./: .gitignore  ARCHITECTURE.md  Ajax.php  BackupForRollover.php  Bottom.php  ConfigInc.php  Containerfile  CourseMoreInfo.php  DatabaseInc.php  DownloadWindow.php  ExportDataTable.php  ForExport.php  ForWindow.php  ForgotPass.php  ForgotPassUserName.php  Help.php  LoginInc.php  Menu.php  Modules.php  PasswordCheck.php  README.md  ROADMAP.md  ResetUserInfo.php  SchMoreInfo.php  Side.php  Top.php  Warehouse.php  compose.yaml  index.php  package-lock.json  package.json  playwright.config.ts  test-inventory.md  test-plan.md  tsconfig.json  ui-demo.php  vitest.config.ts
api/: SchoolInfo.php  StaffInfo.php  StudentEnrollmentInfo.php
bug-reports/: BUG-20260627-01.md  TEMPLATE.md
docs/: server-control.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
functions/: AllowEditFnc.php  AuthorizationFnc.php  ConfigFnc.php  CustomFieldsFnc.php  CustomFunctionsFnc.php  DeCodedsFnc.php  DeletePromptFnc.php  DrawBcFnc.php  DrawHeaderFnc.php  DrawHeaderHomeFnc.php  DrawTabFnc.php  ErrorMessageFnc.php  GetAllMpFnc.php  GetGradeFnc.php  GetMpFnc.php  GetPeriodFnc.php  GetSchoolFnc.php  GetStuListFnc.php  GetSyearFnc.php  GetTeacherFnc.php  HackingLogFnc.php  InputsFnc.php  ListOutputFloatFnc.php  ListOutputFnc.php  MailingLabelFnc.php  MakeLetterGradeFnc.php  MakePercentGradeFnc.php  MiscExportFnc.php  PaginationRequisitesFnc.php  PdfStartFnc.php  PopTableFnc.php  PrepareDateFnc.php  (+6 more)
server/: Cargo.toml
server/src/: lib.rs  main.rs
(+219 files in other folders)
