[package]
name = "leos-server"
version = "0.1.0"
edition = "2021"
description = "LEOS local API server (SQLite, offline-first)"

[dependencies]
tiny_http = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
zip = "2"
sha2 = "0.10"
